Fix the note's content textbox bug and update title of save button at update acting

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -251,5 +251,9 @@
   "endScrollNotification": "This is the end of list",
   "@endScrollNotification": {
     "description": "This is notification when user scroll to the last of the to do list"
+  },
+  "updateButtonTitle": "Update",
+  "@updateButtonTitle": {
+    "description": "This is the title of update button"
   }
 }
