Change time format displaying in date text field after choosing

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -279,5 +279,9 @@
   "emptyContent": "You have not create any content for this task!",
   "@emptyContent": {
     "description": "This notification when there is no content belonged to this task"
+  },
+  "content": "Content",
+  "@content": {
+    "description": "Label of content part"
   }
 }
