Add overlay gif animation screen, profile screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -327,5 +327,13 @@
   "logout": "Logout",
   "@logout": {
     "description": "Title of logout button"
+  },
+  "version": "Version",
+  "@version": {
+    "description": "Lable of app version text"
+  },
+  "advancedSettings": "Advanced Settings",
+  "@advancedSettings": {
+    "description": "Title of advanced settings"
   }
 }
